add docker image support