@@ -20,13 +20,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M4</version>
 				<configuration>
-<!--				<jvmArguments>-XX:+UseSerialGC</jvmArguments>-->
-					<jvmArguments>-XX:+UnlockExperimentalVMOptions</jvmArguments>
-					<jvmArguments>-XX:+UseCGroupMemoryLimitForHeap</jvmArguments>
-					<jvmArguments>-XX:MinHeapFreeRatio=20</jvmArguments>
-					<jvmArguments>-XX:MaxHeapFreeRatio=40</jvmArguments>
-					<jvmArguments>-XX:AdaptiveSizePolicyWeight=90</jvmArguments>
-					<jvmArguments>-XX:MaxRAMFraction=1</jvmArguments>
 					<systemPropertyVariables>
 						<environment>${env}</environment>
 					</systemPropertyVariables>
@@ -35,15 +28,11 @@
 						</additionalClasspathElement>
 					</additionalClasspathElements>
 					<parallel>all</parallel>
-					<threadCount>24</threadCount>
-<!--					<threadCountClasses>3</threadCountClasses>-->
-<!--					<threadCountSuites>2</threadCountSuites>-->
-<!--					<threadCountMethods>5</threadCountMethods>-->
-					<!-- <useUnlimitedThreads>true</useUnlimitedThreads> -->
-					<forkCount>4</forkCount>
+					<threadCount>16</threadCount>
+					<perCoreThreadCount>false</perCoreThreadCount>
+					<forkCount>2.0C</forkCount>
 					<reuseForks>true</reuseForks>
-					<!-- <argLine>-Xmx2048M -XX:MaxPermSize=2048M</argLine> -->
-
+					<argLine>-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MinHeapFreeRatio=20 -XX:MaxHeapFreeRatio=40 -XX:AdaptiveSizePolicyWeight=90 -XX:MaxRAMFraction=1</argLine>
 					<includes>
 						<include>**/*Test.java</include>
 					</includes>
@@ -57,13 +46,6 @@
 				<version>3.0</version>
 				<configuration>
 					<target>1.8</target>
-<!--					<jvmArguments>-XX:+UseSerialGC</jvmArguments>-->
-					<jvmArguments>-XX:+UnlockExperimentalVMOptions</jvmArguments>
-					<jvmArguments>-XX:+UseCGroupMemoryLimitForHeap</jvmArguments>
-					<jvmArguments>-XX:MinHeapFreeRatio=20</jvmArguments>
-					<jvmArguments>-XX:MaxHeapFreeRatio=40</jvmArguments>
-					<jvmArguments>-XX:AdaptiveSizePolicyWeight=90</jvmArguments>
-					<jvmArguments>-XX:MaxRAMFraction=1</jvmArguments>
 				</configuration>
 			</plugin>
 
